# photo-Mosaic

./: 2.js  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.cpp  cmake_install.cmake  imageMosaicAvg.cpp  imageMosaicEuclidean.cpp  imageMosaicTriangle.cpp  main  test.txt
src/: createDataset.cpp  photoMosaicAverageRGB.cpp  photoMosaicAverageRGBFaceDetector.cpp  tmp.cpp
